@@ -1,0 +1,24 @@
+<?php
+/**
+ * Smarty plugin
+ * @package Smarty
+ * @subpackage PluginsModifier
+ */
+
+
+/**
+ * Smarty noprint modifier plugin
+ *
+ * Type:     modifier<br>
+ * Name:     noprint<br>
+ * Purpose:  return an empty string
+ * @author   Uwe Tews
+ * @param string
+ * @return string
+ */
+function smarty_modifier_noprint($string)
+{
+    return '';
+}
+
+?>
